@@ -1,21 +1,0 @@
-{
-  "name": "lastcall.drupal-scaffold",
-  "description": "Scaffolding project for Drupal sites",
-  "license": "GPL-2.0+",
-  "main": "gulpfile.js",
-  "authors": [
-    "Rob Bayliss <rob@lastcallmedia.com>"
-  ],
-  "homepage": "",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "foundation-sites": "~6.3.0"
-  }
-}
