@@ -6,10 +6,11 @@
   "private": true,
   "main": "gulpfile.js",
   "dependencies": {
+    "foundation-sites": "^6.3.1",
     "gulp": "^3.9.1",
     "gulp-help": "^1.6.1",
     "ip": "^1.1.4",
-    "lastcall-gulp-drupal-tasks": "^1.0.0-rc1",
+    "lastcall-gulp-drupal-tasks": "^1.0.0-rc2",
     "yargs": "^7.0.2"
   },
   "scripts": {
