@@ -2,7 +2,7 @@
 @charset "UTF-8";
 
 @import "global";
-@import "foundation-sites/scss/foundation";
+@import "~foundation-sites/scss/foundation";
 
 // Put remote font imports here.
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab');
